feat(search): add vector search and conversation memory

--- a/ui/index.html
+++ b/ui/index.html
@@ -56,6 +56,69 @@
     ::-webkit-scrollbar-thumb:hover {
       background: #6366f1;
     }
+
+    /* Markdown Styles for Chat */
+    .prose-invert {
+      color: inherit;
+    }
+
+    .prose-invert p {
+      margin-top: 0.5em;
+      margin-bottom: 0.5em;
+    }
+
+    .prose-invert p:first-child {
+      margin-top: 0;
+    }
+
+    .prose-invert p:last-child {
+      margin-bottom: 0;
+    }
+
+    .prose-invert strong {
+      font-weight: 600;
+      color: inherit;
+    }
+
+    .prose-invert code {
+      background-color: rgba(100, 116, 139, 0.2);
+      padding: 0.125rem 0.375rem;
+      border-radius: 0.25rem;
+      font-size: 0.875em;
+      font-family: 'Monaco', 'Courier New', monospace;
+    }
+
+    .prose-invert pre {
+      background-color: rgba(15, 23, 42, 0.6);
+      padding: 1rem;
+      border-radius: 0.5rem;
+      overflow-x: auto;
+      margin: 0.5em 0;
+    }
+
+    .prose-invert pre code {
+      background-color: transparent;
+      padding: 0;
+    }
+
+    .prose-invert ul,
+    .prose-invert ol {
+      margin: 0.5em 0;
+      padding-left: 1.5em;
+    }
+
+    .prose-invert li {
+      margin: 0.25em 0;
+    }
+
+    .prose-invert a {
+      color: #818cf8;
+      text-decoration: underline;
+    }
+
+    .prose-invert a:hover {
+      color: #a5b4fc;
+    }
   </style>
   <script type="importmap">
 {
