--- a/ui/index.html
+++ b/ui/index.html
@@ -5,9 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PostChat</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Tailwind CSS via CDN for development -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         extend: {
           colors: {
@@ -23,8 +29,9 @@
       },
     };
   </script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
+    /* Global Overrides */
     html,
     body,
     #root {
@@ -35,11 +42,10 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #0f172a;
-      color: #f8fafc;
+      /* Background and color handled by Tailwind classes in App.tsx */
     }
 
-    /* Custom Scrollbar */
+    /* Custom Scrollbar Aesthetic */
     ::-webkit-scrollbar {
       width: 8px;
     }
@@ -57,7 +63,7 @@
       background: #6366f1;
     }
 
-    /* Markdown Styles for Chat */
+    /* Markdown & Prose Styling for Chat bubbles */
     .prose-invert {
       color: inherit;
     }
@@ -120,22 +126,24 @@
       color: #a5b4fc;
     }
   </style>
+
+  <!-- Import Map for ESM usage if needed by Vite/Dev server -->
   <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0"
+  {
+    "imports": {
+      "react/": "https://esm.sh/react@^19.2.4/",
+      "react": "https://esm.sh/react@^19.2.4",
+      "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+      "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
+      "lucide-react": "https://esm.sh/lucide-react@^0.563.0"
+    }
   }
-}
-</script>
-  <link rel="stylesheet" href="/index.css">
+  </script>
 </head>
 
 <body>
   <div id="root"></div>
+  <!-- Main entry point -->
   <script type="module" src="/index.tsx"></script>
 </body>
 
